edition_li: prevent edition-title to make the view overflow

--- a/app/modules/entities/scss/_edition_commons.scss
+++ b/app/modules/entities/scss/_edition_commons.scss
@@ -19,6 +19,12 @@
     margin: 0;
     padding: 0;
   }
+  .editionEntityActions{
+    flex: 0 0 auto;
+    a{
+      text-wrap: nowrap;
+    }
+  }
   .subtitle{
     @include serif;
   }
